[tool.poetry]
name = "trabalhoweb - api"
version = "0.1.0"
description = "APS Final 4 Periodo"
authors = ["Vinicius Lourenzoni <viniciuslourenzoni0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
sqlmodel = "^0.0.12"
uvicorn = "^0.24.0.post1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
